--- a/index.html
+++ b/index.html
@@ -5,14 +5,83 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <meta name="description" content="this is description" />
+    <style>
+      h1 {
+        font-size: 24px;
+        font-weight: bold;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        text-align: center;
+      }
+      .headings {
+        color: blue;
+      }
+      .heading-2 {
+        text-decoration: underline;
+        text-overflow: none;
+      }
+      #paragraph {
+        width: 100px;
+        height: 100px;
+        overflow: hidden;
+        /* text-shadow: 2px 2px #ff0000; */
+      }
+      .box {
+        /* position: sticky !important; */
+        display: flex;
+        flex-direction: column-reverse;
+        gap: 5px;
+        top: 0;
+        right: 0;
+        z-index: 100;
+        height: 300px;
+        width: 100%;
+        border: 2px dotted black;
+        color: white;
+        background-color: blue;
+        padding: 10px 15px 20px 10px;
+        /* margin: 0px 0px 0px 800px; */
+        /* float: calc(100vw - 100px); */
+        /* height: calc(100vh - 200px); */
+      }
+      .box-child {
+        height: 100px;
+        /* margin: 5px; */
+        width: 200px;
+        /* color: red; */
+        background: white;
+        border: 1px solid black;
+      }
+      /* @media screen and (max-width: 1200px) {
+        .box {
+          margin-left: 200px;
+        }
+      } */
+    </style>
   </head>
   <body>
-    <h1>This is out <span>first site</span></h1>
-    <!-- <h2>This is out first site</h2>
-    <h3>This is out first site</h3>
-    <h4>This is out first site</h4>
-    <h5>This is out first site</h5>
-    <h6>This is out first site</h6> -->
+    <div class="box">
+      <div class="box-child">1</div>
+      <div class="box-child">2</div>
+      <div class="box-child">3</div>
+      <div class="box-child"></div>
+      <div class="box-child"></div>
+      <div class="box-child"></div>
+      <div class="box-child"></div>
+      <div class="box-child"></div>
+      <div class="box-child"></div>
+      <div class="box-child"></div>
+      <div class="box-child"></div>
+      <div class="box-child"></div>
+      <div class="box-child"></div>
+      <div class="box-child"></div>
+    </div>
+    <h1 class="headings">This is out <span>first site</span></h1>
+    <h2 style="color:red; border: 1px solid green; font-size: large;">This is out first site</h2>
+    <h3 class="headings heading-2 ">This is out first site</h3>
+    <h4 class="headings">This is out first site</h4>
+    <h5 class="headings">This is out first site</h5>
+    <h6 class="headings">This is out first site</h6>
+    <!-- <p id="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo blanditiis assumenda animi tempora. Quaerat tempore vero rem soluta illo quibusdam, quas molestias suscipit ipsum ipsam sequi expedita animi provident quia.</p> -->
     <ul>
       <li>list 1</li>
       <li>list 2</li>
