--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
     <meta name="description" content="this is description" />
     <link href="style.css" rel="stylesheet" />
+    <script>
+      console.log("hello")
+    </script>
   </head>
   <body>
     <div class="box">
